Fix alignment of squareroot bar

--- a/static/katex.less
+++ b/static/katex.less
@@ -328,7 +328,7 @@
                 border-bottom-width: 0.04em;
                 content: "";
                 display: block;
-                margin-top: -1px;
+                margin-top: 1px;
             }
         }
     }
